@startuml
title "ER図"

hide circle

entity expenses {
    *id : bigint <<generated>>
    --
    store_id : bigint, nullable
    store_name : varchar(50), nullable
    purchased_at : datetime
    note : varchar(255), nullable
    created_at : datetime
    updated_at : datetime
}

entity items {
    *id : bigint <<generated>>
    --
    name : varchar(50)
    price : decimal(10,2)
    expense_id : bigint
    category_id : bigint
    created_at : datetime
    updated_at : datetime
}

entity categories {
    *id : bigint <<generated>>
    --
    name : varchar(50)
    created_at : datetime
    updated_at : datetime
}

entity payments {
    *id : bigint <<generated>>
    --
    name : varchar(50)
    created_at : datetime
    updated_at : datetime
}

entity stores {
    *id : bigint <<generated>>
    --
    name : varchar(50)
    created_at : datetime
    updated_at : datetime
}

entity expense_payments {
    *id : bigint <<generated>>
    --
    total : decimal(10,2)
    expense_id : bigint
    payment_id : bigint
    created_at : datetime
    updated_at : datetime
}

expenses ||--|{ items
items }o--|| categories
expenses ||--|{ expense_payments
payments ||--o{ expense_payments
expenses }o--o| stores

@enduml